--- a/app/styles/tables.less
+++ b/app/styles/tables.less
@@ -7,14 +7,6 @@ td.truncated-cell {
   white-space: nowrap;
 }
 
-text.title {
-text-anchor: middle;
-text-transform: uppercase;
-font-size: 11px;
-font-weight: 400;
-cursor: help;
-}
-
 .table .btn-group {
   min-width: 48px !important;
 }
